# pdf-translation-platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE-STACK-REBUILD.md  COMPLETE_SYSTEM_ANALYSIS.md  Caddyfile  DEPLOYMENT-SUCCESS.md  DEVELOPMENT_PROGRESS_TRACKER.md  DEVELOPMENT_STATUS.md  FIXES-APPLIED.md  MASTER_PLAN.md  README-USER-GUIDE.md  README.md  SUBDOMAIN_UPDATE.md  SYSTEMATIC_DEVELOPMENT_PLAN.md  TEST_STRATEGY.md  check-quality.sh  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml  env.example  env.prod.example  mkdocs.yml  playwright.config.ts  start.sh  test-basic-functionality.js  test-basic-functionality.sh  verify-frontend-updates.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  translation_quality.yml
.github/workflows/: ci-cd.yml  dependency-updates.yml  docs.yml  quality-checks.yml
backend/: .flake8  Dockerfile  alembic.ini  demo_linting.py  lint.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_semantic_analysis.py
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 20250115_01_add_user_auth_models.py  20250916_01_add_pdfpage_metadata.py  20250918_01_add_usage_tokens_to_pdf_pages.py
backend/app/: main.py  metrics.py  metrics_enhanced.py
backend/app/api/endpoints/: auth.py  collab.py  documents.py  enhanced_documents.py  glossary.py  monitoring.py  pages.py  suggestions.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  enhanced_models.py  models.py  user_models.py
backend/app/services/: auth_service.py  chunker.py  comments_service.py  enhanced_pdf_service.py  glossary_service.py  llm_client.py  pdf_service.py  persian_text_processor.py  presence_service.py  prompt_library.py  provider_router.py  quality_service.py  semantic_analyzer.py  suggestions_service.py  term_extractor.py  translation_service.py  translator.py
backend/app/services/collab/: __init__.py  crdt_manager.py  models.py  room_manager.py  snapshot_store.py
backend/app/services/providers/: __init__.py  argos_provider.py  base.py  deep_translator_provider.py  openai_compatible_provider.py  openai_provider.py
backend/app/workers/: celery_worker.py
backend/tests/integration/: test_chunked_flag.py  test_progress_api.py
backend/tests/unit/: test_chunker_basic.py  test_health.py  test_llm_client_stub.py  test_pdf_upload_and_pages.py  test_services_coverage.py  test_start_translation_stub.py  test_test_translate_page.py  test_translator_orchestrator.py
doc/: AUTHENTICATION_STACK_PROPOSAL_2025.md  AUTH_CHANGELOG.md  AUTH_CURRENT_STATE.md  AUTH_EXECUTION_PHASE1.md  AUTH_ROADMAP.md  CODE_QUALITY_SETUP.md  COMPREHENSIVE_SYSTEM_ANALYSIS.md  CURRENT_STATE.md  DEVELOPMENT_ENHANCEMENT_PROPOSALS.md  DEVELOPMENT_PROCESS.md  ENHANCED_METRICS_IMPLEMENTATION_GUIDE.md  EXECUTION_PLAN.md  FRONTEND_ENHANCEMENT_INSIGHTS.md  FRONTEND_ENHANCEMENT_ROADMAP.md  FRONTEND_IMPLEMENTATION_STRATEGY_FINAL.md  FRONTEND_TEST_REPORT.md  FRONTEND_UX_UI_TEST_PLAN.md  FRONTEND_UX_UI_TEST_PLAN_ENHANCED.md  FRONTEND_UX_UI_TEST_PLAN_ENHANCED_INSIGHTS.md  INTEGRATE_WITH_EXISTING_TRAEFIK.md  MIGRATING_FROM_CADDY_TO_TRAEFIK.md  NEXT_ITERATION_PLAN.md  PHASING_AND_SPRINTS.md  PRIORITY_MATRIX.md  PROGRESS_REPORT_SEPTEMBER_2025.md  PROJECT_MANAGEMENT.md  README.md  ROADMAP.md  SIMPLE_AUTH_PLAN.md  STATUS_REPORT.md  SYSTEM_STATUS_AND_USER_GUIDE.md  TDD_PLAN.md  TRANSLATION_ENHANCEMENTS.md  TRANSLATION_ENHANCEMENTS_V2.md  TRANSLATION_ENHANCEMENTS_V3.md  USER_MANUAL.md  architecture-proposal.md  deployment-guide.md  enhanced-solution-analysis.md  github_like_ux_and_pdf_translation.md  (+3 more)
doc/archives/: api.ts.alternate
docs/: index.md
enh/: 01-live-collab-real-time-editing.md  02-side-by-side-ux-microinteractions.md  03-ai-assistant-and-prompting-system.md  04-suggestions-glossary-quality-feedback.md  05-platform-architecture-and-scalability.md  EXECUTION_PLAN.md  PROTOTYPE_DUAL_PANE_READER.md  SCAFFOLD_COLLAB_AND_PROVIDERS.md  frontend-modernization.md
frontend/: .eslintrc.js  .prettierrc  Dockerfile  babel.config.js.for-tests-only  jest.config.js  jest.config.ts  jest.setup.js  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.test.json
frontend/components/: DocumentViewer.js  EnhancedDocumentViewer.tsx  FileUpload.js  FileUpload.tsx  Icons.js  Icons.tsx  ReaderPage.tsx  ThemeSelector.js
frontend/contexts/: AuthContext.tsx  DocumentContext.tsx  GlossaryContext.tsx  StyledThemeProvider.tsx  ThemeContext.js  ThemeContext.tsx  TranslationContext.tsx
frontend/hooks/: index.ts  usePageChannel.ts  usePageData.ts  useSuggestions.ts  useTranslatePage.ts
frontend/lib/: api.js
frontend/pages/: _app.tsx  documents.tsx  (+9 more)
ins/: inspiration-comparison.md
learn/: 01-backend-fastapi-mastery.md  02-frontend-nextjs-mastery.md  03-realtime-collab-crdt-yjs.md  04-translation-providers-llm-routing.md  05-supabase-n8n-mastery.md  06-observability-testing-devops.md  07-architecture-design-patterns.md  08-hackable-recipes-and-snippets.md  09-study-plan-and-exercises.md  10-design-katas-and-interview-questions.md  11-code-samples-compendium.md  12-roadmaps-and-milestones.md  13-adr-template-and-sample-adrs.md  README.md
monitoring/: grafana-dashboard.json
scripts/: preflight-check.sh  quality-check.sh
sub8/: 01-supabase-strategy.md  02-n8n-strategy.md  03-supabase-n8n-integration-recipes.md
uploads/: .gitkeep
(+33 files in other folders)
